--- a/_textos/lealdade.html
+++ b/_textos/lealdade.html
@@ -46,7 +46,7 @@
                 <li role="presentation"><a href="../contato.html">contato</a></li>
               </ul>
             </nav>
-            <a href="index.html"><h3 class="text-muted">júlio belisário</h3></a>
+            <a href="../index.html"><h3 class="text-muted">júlio belisário</h3></a>
         </div>
         <!-- /Menu -->
         
@@ -59,7 +59,7 @@
             <section class="text-body">
                 <br>
                 <h4>Lealdade</h4>
-                <h5 class="direita"><br><b>29/07/2015</b><br></h5>
+                <h5 class="direita"><br><b>02/01/2015</b><br></h5>
                 <br>
 <p>O presente fora entregue no aniversário de um ano.</p>
 
