--- a/_textos/millenial_technique_to_explain_the_universe_for_dummies.html
+++ b/_textos/millenial_technique_to_explain_the_universe_for_dummies.html
@@ -49,7 +49,7 @@
                 <li role="presentation"><a href="../contato.html">contato</a></li>
               </ul>
             </nav>
-            <a href="index.html"><h3 class="text-muted">júlio belisário</h3></a>
+            <a href="../index.html"><h3 class="text-muted">júlio belisário</h3></a>
         </div>
         <!-- /Menu -->
         
