--- a/_textos/versos_incautos_sobre_minha_inabilidade_de_amar.html
+++ b/_textos/versos_incautos_sobre_minha_inabilidade_de_amar.html
@@ -46,7 +46,7 @@
                 <li role="presentation"><a href="../contato.html">contato</a></li>
               </ul>
             </nav>
-            <a href="index.html"><h3 class="text-muted">júlio belisário</h3></a>
+            <a href="../index.html"><h3 class="text-muted">júlio belisário</h3></a>
         </div>
         <!-- /Menu -->
         
