--- a/_imagens-paginas/wallpapers_diversos.html
+++ b/_imagens-paginas/wallpapers_diversos.html
@@ -85,6 +85,10 @@
             <br>
             <hr size="10" width="80%" align="center" noshade>
             <br>
+            <img class="img-responsive" src="../_imagens/Silly_Walk_Abism.png" alt="">
+            <br>
+            <hr size="10" width="80%" align="center" noshade>
+            <br>
             <img class="img-responsive" src="../_imagens/Wallpaper_Way_Life_Shrug.jpg" alt="">
 
         </div> <!-- /row marketing -->
